feat: Comprehensive backend refactoring - eliminate all hard-coded values
- Created Pydantic-based configuration system (config.py) with 70+ environment variables
- Externalized crop lifecycle to YAML (crop_config.yaml) supporting wheat, rice, cotton, sugarcane
- Built weather service with OpenWeatherMap API integration (fallback to mock data)
- Refactored all backend routes (db.py, main.py, dashboard.py, lifecycle.py, farming_agents.py)
- Extracted all AI/LLM prompts to configurable templates
- Made CORS, ports, database, and all services fully configurable
- Updated docker-compose.yml to load all values from environment variables
- Created comprehensive .env.example with detailed documentation
- Updated Dockerfiles with configurable runtime parameters
- Added startup configuration validation with fail-fast behavior

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,220 @@
-# CropMind AI Environment Configuration
+# CropMind AI - Comprehensive Environment Configuration Template
+# Copy this file to .env and fill in your actual values
 
-# -- GROQ Configuration --
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
+# Database connection URL (REQUIRED)
+# Format: postgresql://user:password@host:port/database
+DATABASE_URL=postgresql://cropmind_user:change_me_in_production@db:5432/cropmind_db
+
+# PostgreSQL specific settings (used by docker-compose)
+POSTGRES_USER=cropmind_user
+POSTGRES_PASSWORD=change_me_in_production
+POSTGRES_DB=cropmind_db
+DB_HOST=db
+DB_PORT=5432
+
+# Database connection pool settings
+DB_POOL_SIZE=5
+DB_MAX_OVERFLOW=10
+
+# Table names (optional, defaults are sensible)
+# DB_TABLE_USERS=users
+# DB_TABLE_FARM_PROFILES=farm_profiles
+# DB_TABLE_FARM_STATES=farm_states
+# DB_TABLE_ADVICE_HISTORY=advice_history
+# DB_TABLE_ALERTS=alerts
+
+# =============================================================================
+# SERVICE PORTS & HOSTS
+# =============================================================================
+# Backend service configuration
+APP_HOST=0.0.0.0
+APP_PORT=8000
+APP_NAME=CropMind AI Backend
+APP_VERSION=1.0.0
+
+# Frontend configuration
+FRONTEND_URL=http://localhost:3000
+FRONTEND_PORT=3000
+FRONTEND_INTERNAL_PORT=3000
+
+# Backend port mapping (for docker-compose)
+BACKEND_PORT=8000
+BACKEND_INTERNAL_PORT=8000
+
+# Database port mapping (for docker-compose)
+# Using 5433 externally to avoid conflicts with local PostgreSQL
+DB_EXTERNAL_PORT=5433
+
+
+# =============================================================================
+# CORS CONFIGURATION
+# =============================================================================
+# Comma-separated list of allowed origins
+# In production, replace with your actual domain(s)
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+
+# Enable credentials (cookies, authorization headers)
+CORS_ALLOW_CREDENTIALS=true
+
+# Allowed HTTP methods (comma-separated)
+CORS_METHODS=GET,POST,PUT,DELETE,OPTIONS
+
+# Allowed headers (* or comma-separated list)
+CORS_HEADERS=*
+
+# =============================================================================
+# AI/LLM CONFIGURATION (GROQ API)
+# =============================================================================
+# Groq API key (REQUIRED) - Get from https://console.groq.com
 GROQ_API_KEY=your_groq_api_key_here
 
-# -- PINECONE Configuration --
+# Model to use for AI responses
+GROQ_MODEL=llama-3.3-70b-versatile
+
+# Temperature settings (0.0-2.0, lower = more deterministic)
+GROQ_ACTION_PLANNER_TEMPERATURE=0.2
+GROQ_TRANSLATION_TEMPERATURE=0.1
+
+# Max tokens in response
+GROQ_MAX_TOKENS=2048
+
+# Top-p sampling (0.0-1.0)
+GROQ_TOP_P=1.0
+
+# =============================================================================
+# RAG CONFIGURATION (PINECONE VECTOR DATABASE)
+# =============================================================================
+# Pinecone API key (REQUIRED) - Get from https://www.pinecone.io/
 PINECONE_API_KEY=your_pinecone_api_key_here
-PINECONE_INDEX=crop-knowledge
 
-# -- Database Configuration (Defaults are set in docker-compose) --
-# DATABASE_URL=postgresql://postgres:postgres@db:5432/cropmind
+# Pinecone index name
+PINECONE_INDEX=cropmind
 
-# -- Frontend configuration --
+# Pinecone host URL (REQUIRED for Pinecone)
+# Example: https://cropmind-abc123.svc.xxx.pinecone.io
+PINECONE_HOST=your_pinecone_host_url_here
+
+# Vector dimension (must match your embeddings model)
+PINECONE_DIMENSION=1536
+
+# Number of top results to retrieve
+PINECONE_TOP_K=3
+
+# =============================================================================
+# CROP LIFECYCLE CONFIGURATION
+# =============================================================================
+# Path to crop configuration YAML file (relative to backend/app/)
+CROP_CONFIG_PATH=app/config/crop_config.yaml
+
+# =============================================================================
+# WEATHER API CONFIGURATION
+# =============================================================================
+# Weather API provider (openweathermap, weatherapi, etc.)
+WEATHER_API_PROVIDER=openweathermap
+
+# Weather API key (optional - uses mock data if not provided)
+# Get from https://openweathermap.org/api
+WEATHER_API_KEY=your_openweathermap_api_key_here
+
+# Weather API endpoint
+WEATHER_API_ENDPOINT=https://api.openweathermap.org/data/2.5
+
+# Cache TTL in seconds (how long to cache weather data)
+WEATHER_CACHE_TTL=1800
+
+# =============================================================================
+# LOGGING CONFIGURATION
+# =============================================================================
+# Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
+
+# Log format: json or text
+LOG_FORMAT=json
+
+# Log file path (optional, logs to console if not set)
+# LOG_FILE=/var/log/cropmind/app.log
+
+# =============================================================================
+# SECURITY CONFIGURATION
+# =============================================================================
+# JWT secret key for token signing (change in production!)
+JWT_SECRET_KEY=change-me-in-production-use-strong-random-key-min-32-chars
+
+# JWT algorithm
+JWT_ALGORITHM=HS256
+
+# JWT token expiration in minutes
+JWT_EXPIRATION_MINUTES=60
+
+# =============================================================================
+# MESSAGES & DEFAULTS
+# =============================================================================
+# API welcome message
+API_WELCOME_MESSAGE=CropMind AI API is online
+
+# Default language for new users
+DEFAULT_LANGUAGE=English
+
+# Default name for new users
+DEFAULT_USER_NAME=Farmer
+
+# Default timezone
+DEFAULT_TIMEZONE=UTC
+
+# =============================================================================
+# FEATURE FLAGS
+# =============================================================================
+# Enable RAG (vector search) for agricultural knowledge
+ENABLE_RAG=true
+
+# Enable real weather API (false = use mock data)
+ENABLE_WEATHER_API=true
+
+# Enable multilingual translation
+ENABLE_MULTILINGUAL=true
+
+# =============================================================================
+# FRONTEND CONFIGURATION (NEXT.JS)
+# =============================================================================
+# Backend API URL for frontend
 NEXT_PUBLIC_API_URL=http://localhost:8000
+
+# App name displayed in frontend
+NEXT_PUBLIC_APP_NAME=CropMind AI
+
+# Firebase Authentication Configuration
+# Get these from Firebase Console: https://console.firebase.google.com/
+NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456789
+NEXT_PUBLIC_FIREBASE_APP_ID=1:123456789:web:abcdef
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Frontend feature flags
+NEXT_PUBLIC_ENABLE_PHONE_AUTH=false
+NEXT_PUBLIC_ENABLE_DEMO_MODE=true
+
+# =============================================================================
+# DEPLOYMENT CONFIGURATION
+# =============================================================================
+# Environment: development, staging, production
+NODE_ENV=development
+
+# Disable Next.js telemetry
+NEXT_TELEMETRY_DISABLED=1
+
+# =============================================================================
+# NOTES
+# =============================================================================
+# 1. NEVER commit the actual .env file to version control
+# 2. Always use strong, random passwords in production
+# 3. Rotate API keys regularly
+# 4. Use environment-specific .env files (.env.staging, .env.production)
+# 5. For Kubernetes/cloud deployments, use secrets management
+# 6. Required fields: DATABASE_URL, GROQ_API_KEY, PINECONE_API_KEY, PINECONE_HOST
+#    Optional: WEATHER_API_KEY (uses mock data if not provided)
