--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,12 @@
-fastapi
-uvicorn[standard]
-sqlalchemy
-psycopg2-binary
-groq
-pinecone
-pydantic-settings
-httpx
-pyyaml
-email-validator
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+sqlalchemy==2.0.36
+psycopg2-binary==2.9.9
+groq==0.4.1
+pinecone-client==3.2.2
+pydantic==2.9.2
+pydantic-settings==2.6.1
+httpx==0.28.1
+pyyaml==6.0.2
+email-validator==2.2.0
+python-multipart==0.0.9
