--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,10 +60,10 @@ services:
       - PINECONE_TOP_K=${PINECONE_TOP_K:-3}
       # Weather
       - WEATHER_API_PROVIDER=${WEATHER_API_PROVIDER:-openweathermap}
-      - WEATHER_API_KEY=fe2db33c046a068d9f49037045135fe7
+      - WEATHER_API_KEY=${WEATHER_API_KEY:-}
       - WEATHER_API_ENDPOINT=${WEATHER_API_ENDPOINT:-https://api.openweathermap.org/data/2.5}
       # CORS
-      - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:3000}
+      - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:3000,https://your-app.vercel.app}
       - CORS_ALLOW_CREDENTIALS=${CORS_ALLOW_CREDENTIALS:-true}
       - CORS_METHODS=${CORS_METHODS:-GET,POST,PUT,DELETE,OPTIONS}
       - CORS_HEADERS=${CORS_HEADERS:-*}
@@ -83,6 +83,11 @@ services:
     depends_on:
       - db
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     volumes:
       - ./backend:/app
       - ./backend/app/config:/app/app/config:ro  # Mount config directory as read-only
